refactor: edit package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/ashablyka/virtual-keyboard.git"
   },
-  "author": "",
+  "author": "ashablyka",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ashablyka/virtual-keyboard/issues"
