--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,21 @@
         "comma-dangle": [
             "error",
             "always-multiline"
+        ],
+        "object-curly-newline": [
+          "error",
+          {
+            "ObjectExpression": { "multiline": true },
+            "ObjectPattern": { "multiline": true },
+            "ImportDeclaration": "never",
+            "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+          }
+        ],
+        "no-use-before-define": ["error",
+          {
+            "functions": false,
+            "classes": true
+          }
         ]
     }
-}
+  }
