--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
         "es6": true
     },
     "extends": "airbnb/base",
+    "parser": "babel-eslint",
     "rules": {
         "linebreak-style": [
             "error",
