--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
             "functions": false,
             "classes": true
           }
-        ]
+        ],
+        "no-param-reassign": ["error", { "props": false }]
     }
   }
